# flashcards

./: 20251207_export.csv  Caddyfile  README.md  claude.md  index.html  package.json  project_context.md  sw.js
.agent/rules/: context.md
.agent/skills/: ci_cd_manager  code_writer  ddd_architect  test_runner  test_writer
.github/workflows/: debug-server.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  tests.yml
backend/: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 5a3c451dd3e0_initial_migration.py
data/: a2_vocabulary.csv  vocabulary.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/components/ui/: ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/auth/: Login.test.tsx  Login.tsx  Signup.tsx
frontend/src/pages/dashboard/: DashboardHome.tsx
js/: app.js  dictionary.js  games.js  srs.js  state.js  storage.js
js/core/: parser.js  storage.js
js/games/: crossword.js  memory.js  raindrop.js
js/ui/: dashboard.js  dictionary.js  review.js
src/components/layout/: Layout.jsx  Sidebar.jsx
src/features/review/: ReviewSession.jsx
tests/: filters.test.js  parser.test.js  run.html  setup.js  srs.test.js  state.test.js
v2-react/: package-lock.json  package.json  vite.config.js
v2-react/src/: App.jsx
(+4 files in other folders)
